p5-codegen/tests/RecordTypeTooLarge.mj.err
 line 1, column 10: error: record or object type is too large
